Fix footer overflow

--- a/src/app/sections/footer/footer.component.scss
+++ b/src/app/sections/footer/footer.component.scss
@@ -13,8 +13,8 @@ footer {
     position: absolute;
 
     top: 0;
-    left: 0;
-    right: 0;
+    left: 2rem;
+    right: 2rem;
     height: 1rem;
 
     background: var(--vj-secondary-bg);
